# macron-monitor

./: .gitignore  Dockerfile  README.md  pyproject.toml
macron_monitor/: MacronMonitor.py  WPNZArticleProvider.py  __init__.py  user-config.py
macron_monitor/detectors/: MaoriWordDetector.py  RemovedMacronDetector.py  UnMacronedLinkDetector.py  __init__.py
tests/: test_MacronMonitor.py
tests/detectors/: __init__.py  test_MaoriWordDetector.py  test_UnMacronedLinkDetector.py
