[tool.poetry]
name = "macron-monitor"
version = "0.1.0"
description = ""
authors = ["David Palmer <david.palmer@adscale.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
aiosseclient = "^0.1.3"
pywikibot = {extras = ["mwoauth"], version = "^9.4.1"}
sseclient = "^0.0.27"
bs4 = "^0.0.2"
unidecode = "^1.3.8"
prometheus-client = "^0.21.0"
requests-oauthlib = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
